// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdaptivityElementDialogContainer displays correct npc thumbnail for model "a-npc-alerobot" 1`] = `
<img
  alt="LearningImage!"
  class="z-20 invisible object-contain h-0 -scale-x-100 brightness-125 lg:visible lg:h-full "
  data-testid="npcImage"
  src="a-npc-alerobot-welcome.png"
/>
`;

exports[`AdaptivityElementDialogContainer displays correct npc thumbnail for model "a-npc-alerobot" 2`] = `
<img
  alt="LearningImage!"
  class="visible h-16 -scale-x-100 lg:invisible lg:h-0"
  data-testid="npcImage"
  src="a-npc-alerobot-welcome.png"
/>
`;

exports[`AdaptivityElementDialogContainer displays correct npc thumbnail for model "a-npc-defaultarcade" 1`] = `
<img
  alt="LearningImage!"
  class="z-20 invisible object-contain h-0 -scale-x-100 brightness-125 lg:visible lg:h-full "
  data-testid="npcImage"
  src="a-npc-sheriffjustice-welcome.png"
/>
`;

exports[`AdaptivityElementDialogContainer displays correct npc thumbnail for model "a-npc-defaultarcade" 2`] = `
<img
  alt="LearningImage!"
  class="visible h-16 -scale-x-100 lg:invisible lg:h-0"
  data-testid="npcImage"
  src="a-npc-sheriffjustice-welcome.png"
/>
`;

exports[`AdaptivityElementDialogContainer displays correct npc thumbnail for model "a-npc-defaultcampus" 1`] = `
<img
  alt="LearningImage!"
  class="z-20 invisible object-contain h-0 -scale-x-100 brightness-125 lg:visible lg:h-full "
  data-testid="npcImage"
  src="a-npc-teamb-male-welcome.png"
/>
`;

exports[`AdaptivityElementDialogContainer displays correct npc thumbnail for model "a-npc-defaultcampus" 2`] = `
<img
  alt="LearningImage!"
  class="visible h-16 -scale-x-100 lg:invisible lg:h-0"
  data-testid="npcImage"
  src="a-npc-teamb-male-welcome.png"
/>
`;

exports[`AdaptivityElementDialogContainer displays correct npc thumbnail for model "a-npc-defaultsuburb" 1`] = `
<img
  alt="LearningImage!"
  class="z-20 invisible object-contain h-0 -scale-x-100 brightness-125 lg:visible lg:h-full "
  data-testid="npcImage"
  src="a-npc-teamd-male-welcome.png"
/>
`;

exports[`AdaptivityElementDialogContainer displays correct npc thumbnail for model "a-npc-defaultsuburb" 2`] = `
<img
  alt="LearningImage!"
  class="visible h-16 -scale-x-100 lg:invisible lg:h-0"
  data-testid="npcImage"
  src="a-npc-teamd-male-welcome.png"
/>
`;

exports[`AdaptivityElementDialogContainer should render 1`] = `
<div>
  <div
    class=" flex gap-2 m-2 w-fit h-fit text-adlertextgrey"
  >
    <div
      class="fixed top-0 bottom-0 left-0 right-0 flex flex-col items-center justify-center w-screen h-full bg-black bg-opacity-30 lg:grid lg:grid-rows-3 lg:items-start"
    >
      <div
        class="flex items-end justify-start invisible w-full row-start-2 pl-16 lg:visible lg:h-full"
      >
        <img
          alt="LearningImage!"
          class="z-20 invisible object-contain h-0 -scale-x-100 brightness-125 lg:visible lg:h-full "
          data-testid="npcImage"
          src="a-npc-alerobot-welcome.png"
        />
      </div>
      <div
        class="flex justify-center items-start pb-2 w-full lg:w-[95vw] max-w-7xl max-h-[100vh] lg:max-h-[32vh] pt-2 lg:pt-0 row-start-3 "
      >
        <div
          class="flex flex-col justify-between p-2 xl:px-8 rounded-lg bg-gradient-to-br from-adlerbggradientfrom to-adlerbggradientto h-full w-full max-w-[95%] max-h-[95%] lg:max-h-[100%] "
        >
          <div
            class="z-20 flex items-center justify-center w-full h-20 gap-2 p-2 pb-3 overflow-hidden text-xl font-bold text-adlerdarkblue lg:roboto-black lg:text-2xl "
          >
            <div
              class=""
            >
              <button
                class="mr-2 roboto-black xl:w-10 xl:h-10 justify-center p-1 lg:w-16 lg:h-16 md:w-14 md:h-14 sm:w-10 sm:h-10 w-10 h-10 aspect-square mobile-landscape:w-9 mobile-landscape:h-9 flex items-center text-sm rounded-lg hover:cursor-pointer lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue landscape:hover:bg-adleryellow active:bg-adleryellow"
              >
                ◀
              </button>
            </div>
            <img
              alt="LearningImage!"
              class="visible h-16 -scale-x-100 lg:invisible lg:h-0"
              data-testid="npcImage"
              src="a-npc-alerobot-welcome.png"
            />
            <div
              class="w-full text-xs lg:text-lg"
            >
              singleChoiceSelectedtestQuestionText
            </div>
            <button
              class="justify-center mobile-portrait:rounded-md aspect-square flex items-center rounded-lg hover:cursor-pointer hover:border-adlerdarkblue hover:bg-adleryellow lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue w-8 h-8 p-1 text-xs roboto-black xl:w-10 xl:h-10 lg:w-10 lg:h-10 md:w-10 md:h-10 sm:w-10 sm:h-10"
            >
              <img
                alt="CloseButton"
                class="w-6 h-6"
                src="close.svg"
              />
            </button>
          </div>
          <div
            class="overflow-auto max-h-[80vh] lg:max-h-[16vh] xl:max-h-[20vh]"
          >
            <div
              class="flex items-center justify-center px-1 mb-4 rounded-lg font-regular h-fit lg:mx-4"
            >
              <div
                class="flex flex-col w-full p-2 m-auto lg:justify-between lg:flex-row"
              >
                <div
                  class="flex flex-wrap justify-start gap-4"
                >
                  <div
                    class=""
                  >
                    <button
                      class="px-2 py-1 justify-center flex items-center text-sm rounded-lg hover:cursor-pointer lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue landscape:hover:bg-adleryellow active:bg-adleryellow"
                    >
                      <p
                        class="text-sm"
                      >
                        testAnswerText
                      </p>
                    </button>
                  </div>
                </div>
                <div
                  class="flex items-end justify-end w-auto gap-2 pt-8 font-bold lg:w-1/6"
                >
                  <div
                    class="fixed"
                  >
                    <div
                      class=""
                    >
                      <button
                        class="px-2 py-1 justify-center box-border text-adlerdeactivatedtext bg-adlerbuttonlocked flex items-center text-sm rounded-lg lg:text-xl font-regular overflow-hidden grayscale"
                        disabled=""
                      >
                        <p
                          class="text-sm"
                        >
                          submitAnswer
                        </p>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class=" flex justify-between items-end pt-4 text-[0.5rem] lg:text-xs modal-footer "
            >
              <p />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
